--- a/app/src/main/assets/www/model_procgen.html
+++ b/app/src/main/assets/www/model_procgen.html
@@ -8,6 +8,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"/>
     <script src="lib/three.js"></script>
+    <script src="lib/teapot.js"></script>
     <script src="lib/paper.js"></script>
     <script src="lib/offset.js"></script>
     <style>
